--- a/node-mysql-crud-app/views/dashboard.ejs
+++ b/node-mysql-crud-app/views/dashboard.ejs
@@ -29,7 +29,7 @@
                                 <th scope="col">Email</th>
                                 <th scope="col">Skill Level</th>
                                 <th scope="col">Username</th>
-                                <th scope="col">Password</th>
+                                <th scope="col" style="display:none">Password</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -40,7 +40,7 @@
                                     <td><%= user.email %></td>
                                     <td><%= user.skill %></td>
                                     <td><%= user.username %></td>
-                                    <td><%= user.password %></td>
+                                    <td style="display:none"><%= user.password %></td>
                                 </tr>
                             <% }) %>
                             </tbody>
